Add twitter feed

--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -48,6 +48,7 @@
         <aside id="sidebar">
                 {% include 'conference.html' %}
                 {% include 'book.html' %}
+                {% include 'twitter_feed.html' %}
                 <div class="widget">
                         <h2>Categories</h2>
                         <ul>
