--- a/notmyidea-lxj/static/css/main.css
+++ b/notmyidea-lxj/static/css/main.css
@@ -101,6 +101,18 @@ ol {
 
 .readmore {  }
 
+.note {
+  background-color: #F0F0F0;
+  padding: 10px;
+  color: #000;
+  margin: 10px;
+  border: 1px solid #CCC;
+  border-radius: 2px;
+}
+.note p.first {
+  font-weight: bold;
+}
+
 dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
