--- a/notmyidea-lxj/templates/book.html
+++ b/notmyidea-lxj/templates/book.html
@@ -1,5 +1,5 @@
 <div class="widget" id="book" role="book">
-<h2>MySQL 5.1 Plugins Development</h2>
+<h2><i class="fa fa-book fa-lg"></i> MySQL 5.1 Plugins Development</h2>
 <a href="https://www.packtpub.com/mysql-5-1-plugins-development/book"><img border="0" style="float:left" src="{{ SITEURL }}/theme/images/0608OS_MockupCover_sm.png" />
 MySQL 5.1 Plugins Development by Andrew Hutchings and Sergei Golubchik is now available from Packt Publishing.</a>
 <br style="clear:left;" />
