--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -60,7 +60,7 @@
                 </div>
         {% if LINKS %}
                 <div class="widget blogroll">
-                        <h2><i class="fa fa-external-link fa-lg"></i> HP Advanced Technology Group Blogs</h2>
+                        <h2><i class="fa fa-external-link fa-lg"></i> HP Advanced Technology Group</h2>
                         <ul>
                         {% for name, link in LINKS %}
                             <li><a href="{{ link }}"><i class="fa fa-globe fa-lg"></i> {{ name }}</a></li>
