--- a/notmyidea-lxj/templates/article_infos.html
+++ b/notmyidea-lxj/templates/article_infos.html
@@ -6,7 +6,7 @@
                 By <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>
         </address>
         {% endif %}
-<p><i class="fa fa-folder-open fa-fw"></i> <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>. {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">get the pdf</a>{% endif %}</p>
+<p><i class="fa fa-folder-open fa-fw"></i> <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a> {% if PDF_PROCESSOR %}<a href="{{ SITEURL }}/pdf/{{ article.slug }}.pdf">get the pdf</a>{% endif %}</p>
 {% include 'taglist.html' %}
 {% include 'translations.html' %}
 </footer><!-- /.post-info -->
