Update my twitter

--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -48,7 +48,8 @@
         {% endblock %}
 
         <aside id="sidebar">
-                {% include 'book.html' %}
+          <!-- {% include 'book.html' %} -->
+          <h2><i class="fa fa-twitter fa-lg"></i> Twitter Feed</h2>
                 {% include 'twitter_feed.html' %}
                 <div class="widget">
                         <h2><i class="fa fa-home fa-lg"></i> Categories</h2>
