--- a/notmyidea-lxj/templates/twitter_feed.html
+++ b/notmyidea-lxj/templates/twitter_feed.html
@@ -1,5 +1,1 @@
-<div class='widget' id='twitter_feed'>
-<h2><i class="fa fa-twitter fa-lg"></i> Twitter Feed</h2>
-<a class="twitter-timeline" width="280" height="300" href="https://twitter.com/LinuxJedi" data-widget-id="269020197594210304">Tweets by @LinuxJedi</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
+<a class="twitter-timeline" data-width="280" data-height="300" href="https://twitter.com/zeyuanhu">Tweets by zeyuanhu</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
