Remove banner image temporarily

--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -27,7 +27,8 @@
 <body id="index" class="home">
 {% include 'github.html' %}
         <header id="banner" class="body">
-          <h1><a href="{{ SITEURL }}/index.html"><img src="{{ SITEURL }}/theme/images/LinuxJedi_head.png" alt="{{ SITENAME }}" />{% if SITESUBTITLE %}<br /><strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
+          <!-- <h1><a href="{{ SITEURL }}/index.html"><img src="{{ SITEURL }}/theme/images/logo2.png" alt="{{ SITENAME }}" />{% if SITESUBTITLE %}<br /><strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1> -->
+          <!-- <h1><a href="{{ SITEURL }}/index.html">{{ SITENAME }}{% if SITESUBTITLE %}<br /><strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1> -->
                 <nav><ul>
                 {% for title, link in MENUITEMS %}
                     <li><a href="{{ link }}">{{ title }}</a></li>
