--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -115,12 +115,12 @@
         {% endif %}
         </aside><!-- /#sidebar -->
 
-        <footer id="footer" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
-                </address><!-- /#about -->
-                <p>The LinuxJedi logo and the content of this blog is licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_GB">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
-        </footer><!-- /#footer -->
+        <!-- <footer id="footer" class="body"> -->
+        <!--         <address id="about" class="vcard body"> -->
+        <!--         Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>. -->
+        <!--         </address><\!-- /#about -\-> -->
+        <!--         <p>The LinuxJedi logo and the content of this blog is licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_GB">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p> -->
+        <!-- </footer><\!-- /#footer -\-> -->
 
 {% include 'analytics.html' %}
 </body>
