--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -74,10 +74,10 @@
                 <div class="widget social">
                         <h2><i class="fa fa-comments fa-lg"></i> Social</h2>
                         <ul>
-                            <li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" rel="alternate"><i class="fa fa-rss-square fa-lg"></i> RSS feed</a></li>
-                            {% if FEED_RSS %}
-                            <li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate"><i class="fa fa-rss-square fa-lg"></i> RSS feed</a></li>
-                            {% endif %}
+                            <!-- <li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" rel="alternate"><i class="fa fa-rss-square fa-lg"></i> RSS feed</a></li> -->
+                            <!-- {% if FEED_RSS %} -->
+                            <!-- <li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate"><i class="fa fa-rss-square fa-lg"></i> RSS feed</a></li> -->
+                            <!-- {% endif %} -->
 
                         {% for name, link in SOCIAL %}
                     {% set name_sanitized = name|lower|replace('+','-plus')|replace(' ','-') %}
