Chaneg Archives to Blog in top bar

--- a/notmyidea-lxj/templates/base.html
+++ b/notmyidea-lxj/templates/base.html
@@ -38,7 +38,7 @@
                     <li {% if p == page %}class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
                 {% endfor %}
                 {% endif %}
-                <li><a href="{{ SITEURL }}/{{ ARCHIVES_URL }}">Archives</a></li>
+                <li><a href="{{ SITEURL }}/{{ ARCHIVES_URL }}">Blog</a></li>
                 {#{% for cat, null in categories %}
                     <li {% if cat == category %}class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
                 {% endfor %}#}
