--- a/notmyidea-lxj/templates/archives.html
+++ b/notmyidea-lxj/templates/archives.html
@@ -3,11 +3,26 @@
 <section id="content" class="body">
 <h1>Archives for {{ SITENAME }}</h1>
 
-<dl>
+<!--<dl>
 {% for article in dates %}
     <dt>{{ article.locale_date }}</dt>
     <dd><a href='{{ article.url }}'>{{ article.title }}</a></dd>
 {% endfor %}
-</dl>
+</dl>-->
+
+{# based on http://stackoverflow.com/questions/12764291/jinja2-group-by-month-year #}
+
+{% for year, year_group in dates|groupby('date.year')|reverse %}
+  {% for month, month_group in year_group|groupby('date.month')|reverse %}
+    <h4 class="date">{{ (month_group|first).date|strftime('%b %Y') }}</h4>
+    <div class="post archives">
+       <ul>
+          {% for article in month_group %}
+            <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
+          {% endfor %}
+       </ul>
+    </div>
+  {% endfor %}
+{% endfor %}
 </section>
 {% endblock %}
