--- a/notmyidea-lxj/templates/archives.html
+++ b/notmyidea-lxj/templates/archives.html
@@ -3,14 +3,22 @@
 <section id="content" class="body">
 <h1>Archives for {{ SITENAME }}</h1>
 
-<!--<dl>
-{% for article in dates %}
-    <dt>{{ article.locale_date }}</dt>
-    <dd><a href='{{ article.url }}'>{{ article.title }}</a></dd>
-{% endfor %}
-</dl>-->
+<p>
+<h2>Archives by year</h2>
 
-{# based on http://stackoverflow.com/questions/12764291/jinja2-group-by-month-year #}
+{% for year, numposts in articles|groupby('date.year') %}
+ <li><a href="{{ SITEURL }}/archives/{{ year }}/period_archives.html">{{ year }} ({{ numposts|count }})</a></li>
+{% endfor %}
+</p>
+
+<p>
+<h2>Archives by tag</h2>
+
+{% for tag, articles in tags %}
+  <li><a href="{{ SITEURL }}/tag/{{ tag }}.html">{{ tag }} ({{ articles|count }})</a></li>
+{% endfor %}
+</p>
+<!--{# based on http://stackoverflow.com/questions/12764291/jinja2-group-by-month-year #}
 
 {% for year, year_group in dates|groupby('date.year')|reverse %}
   {% for month, month_group in year_group|groupby('date.month')|reverse %}
@@ -23,6 +31,6 @@
        </ul>
     </div>
   {% endfor %}
-{% endfor %}
+{% endfor %}-->
 </section>
 {% endblock %}
