Remove ugly page icon for pagination

--- a/notmyidea-lxj/templates/pagination.html
+++ b/notmyidea-lxj/templates/pagination.html
@@ -14,7 +14,7 @@
             {% endif %}
         </ul>
     {% else %}
-        <h2><i class="fa fa-file-o"></i> Pages</h2>
+        <!-- <h2><i class="fa fa-file-o"></i> Pages</h2> -->
         <hr />
         <ul class="pagination">
             {% if articles_page.has_previous() %}
