--- a/pelican-bootstrap3/templates/base.html
+++ b/pelican-bootstrap3/templates/base.html
@@ -151,6 +151,7 @@
                 </form></span>
               </li>
             {% endif %}
+              <li><a href="{{ SITEURL }}/about-zeyuan.html"><i class="fa fa-question"></i><span class="icon-label">{{ _('About') }}</span></a></li>
             {% if ARCHIVES_SAVE_AS %}
               <li><a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}"><i class="fa fa-th-list"></i><span class="icon-label">{{ _('Archives') }}</span></a></li>
             {% endif %}
