--- a/notmyidea-lxj/templates/archives.html
+++ b/notmyidea-lxj/templates/archives.html
@@ -17,6 +17,11 @@
 </script>
 <gcse:searchbox-only></gcse:searchbox-only>
 
+<p>
+<h2>Feeds</h2>
+<li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" rel="alternate"><i class="fa fa-rss-square fa-lg"></i> Atom feed</a></li>
+<li><a href="{{ SITEURL }}/{{ FEED_ALL_RSS }}" rel="alternate"><i class="fa fa-rss-square fa-lg"></i> RSS feed</a></li>
+</p>
 
 <p>
 <h2>Archives by year</h2>
