--- a/pelican-cid/templates/base.html
+++ b/pelican-cid/templates/base.html
@@ -8,6 +8,9 @@
         <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="This is the homepage of Zeyuan (Zack) Hu" name="description">
+        <meta content="Zeyuan Hu, Zeyuan, Zack Hu, zack, zeyuan hu, zeyuan ibm, IBM, Zeyuan IBM, UW Madison, University of Wisconsin Madison, zeyuan wisc, zeyuan IBM, zeyuan federation" name="keywords">
+        <meta content="Zeyuan Hu" name="author">
         {% if USE_OPEN_GRAPH %}
             {% if OPEN_GRAPH_FB_APP_ID %}
                 <meta property="fb:app_id" content="{{ OPEN_GRAPH_FB_APP_ID }}" />
