Update header template

--- a/pelican-cid/templates/header.html
+++ b/pelican-cid/templates/header.html
@@ -2,7 +2,7 @@
     <h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
     <p>{% if SITESUBTITLE %} {{ SITESUBTITLE }} {% endif %}</p>
     <nav>
-        <a href="{{ SITEURL }}/zeyuan-hus-resume.html" style="padding: 10px">RESUME</a>
+        <!--<a href="{{ SITEURL }}/zeyuan-hus-resume.html" style="padding: 10px">RESUME</a>-->
         <a href="{{ SITEURL }}/projects.html" style="padding: 10px">PROJECTS</a>
         <a href="{{ SITEURL }}/quotes.html" style="padding: 10px">QUOTES</a>
         <a href="{{ SITEURL }}/{{ INDEX_URL }}" style="padding: 10px">BLOG</a>
