Add quotes and css adjustment

--- a/pelican-cid/src/sass/cid.sass
+++ b/pelican-cid/src/sass/cid.sass
@@ -18,6 +18,8 @@ $monospace-font: 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace
 
 code, kbd, pre, samp
     font-family: $monospace-font
+    border: 1px solid #ccc
+    padding: 20px 5px 20px 20px
 
 body
     font-family: $body-font
