Update sass style

--- a/pelican-cid/src/sass/cid.sass
+++ b/pelican-cid/src/sass/cid.sass
@@ -3,12 +3,12 @@
 $break-small: 640px
 
 $text-color: #030303
-$bg-color: #fefefe
+$bg-color: #fdf6e3
 $code-color: #c7254e
 $code-bg-color: #f9f2f4
 
 $header-font: 'Gentium Book Basic', 'Georgia', serif
-$body-font: 'Merriweather', 'Georgia', serif
+$body-font: 'Droid Sans', 'Merriweather', 'Georgia', serif
 $monospace-font: 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace
 
 *
