--- a/pelican-cid/src/sass/cid.sass
+++ b/pelican-cid/src/sass/cid.sass
@@ -21,12 +21,24 @@ code, kbd, pre, samp
     border: 1px solid #ccc
     padding: 20px 5px 20px 20px
 
+p
+    line-height: 1.5em
+
+.blog-header a
+    text-decoration: none
+
+a:hover
+    background-color: #C74350
+    color: white
+    text-decoration: none
+
 body
     font-family: $body-font
     font-weight: 300
 
     a
         font-weight: 400
+        text-decoration-style: dotted
 
     h1, h2, h3, h4, h5, h6
         font-family: $header-font
@@ -143,7 +155,7 @@ body
     // The post body
     .post
 
-        font-size: 1.18em
+        font-size: 16px
         @media screen and (max-width: $break-small)
             font-size: 1em
 
@@ -156,7 +168,7 @@ body
         h4
             font-size: 1.2em
         h5, h6
-            font-size: 1.18em
+            font-size: 16px
         a
             font-weight: 400
 
