Change the background color

--- a/pelican-cid/src/sass/cid.sass
+++ b/pelican-cid/src/sass/cid.sass
@@ -3,7 +3,7 @@
 $break-small: 640px
 
 $text-color: #030303
-$bg-color: #fdf6e3
+$bg-color: #fefefe
 $code-color: #c7254e
 $code-bg-color: #f9f2f4
 
