--- a/pelican-cid/src/sass/cid.sass
+++ b/pelican-cid/src/sass/cid.sass
@@ -26,11 +26,13 @@ p
 
 .blog-header a
     text-decoration: none
+    border-bottom: none
 
 a:hover
     background-color: #C74350
     color: white
     text-decoration: none
+    border-bottom: none
 
 body
     font-family: $body-font
@@ -38,7 +40,8 @@ body
 
     a
         font-weight: 400
-        text-decoration-style: dotted
+        text-decoration: none
+        border-bottom: 1px dotted #000
 
     h1, h2, h3, h4, h5, h6
         font-family: $header-font
