Update cid sass

--- a/pelican-cid/src/sass/cid.sass
+++ b/pelican-cid/src/sass/cid.sass
@@ -34,6 +34,9 @@ a:hover
     text-decoration: none
     border-bottom: none
 
+li
+    margin: 4px
+
 body
     font-family: $body-font
     font-weight: 300
